--- a/promo_site_frontend/style.css
+++ b/promo_site_frontend/style.css
@@ -103,7 +103,7 @@ footer {
     width: 100vw;
     height: 100px;
     position: relative;
-    background-image: url(footer_bg.png);
+    background-image: url(https://staticfiles-ru.warthunder.com/upload/image/!2023/10/events/wt_11_years/_thumbs/999x562/1920x1080_wt_11_years_fire_logo_f404e0c4525c2cb6d3e9a1c26c602700_999x562_479f49c71885934eaffeac2014496e02.jpg);
     background-size: cover;
     background-position: center;
 }
